--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "build": "bsb -make-world -clean-world",
     "watch": "bsb -make-world -clean-world -w",
+    "clean": "bsb -clean-world",
     "test": "jest"
   },
   "dependencies": {
